--- a/settings.json
+++ b/settings.json
@@ -1,15 +1,15 @@
 {
 "AutoRespon": true,
 "AutoMusic": false,
-"AntiDelete": true,
-"autoread": true,
+"AntiDelete": false,
+"autoread": false,
 "autoplaymusic": true,
 "autocomposing": false,
 "autorecording": true,
-"BotName":"Fandi Botz",  nama bot <-
-"NomorOwner":"6281213958463",  ganti jadi no owner lu <-
-"NomorOwner2":"+62 812-1395-8463",  ganti jadi no owner lu<-
-"NamaOwner":"YT FGZCRAFT",  nama owner<-
+"BotName":"ROZZ Botz",  nama bot <-
+"NomorOwner":"6281333154367",  ganti jadi no owner lu <-
+"NomorOwner2":"6281333154367",  ganti jadi no owner lu<-
+"NamaOwner":"Rizall",  nama owner<-
 "Dana":"081213958463", 
 "Pulsa":"081213958463", 
 "Ovo":"081213958463", 
